--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ footer {
 @media only screen and (max-width: 600px) {
     .nav-container {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
 
     .logo-icon {
