--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@ footer {
     nav>a {
         display: block;
         width: 100%;
-        padding: 10px 100px 20px 100px;
+        padding: 10px;
         text-align: center;
     }
 
